--- a/index.html
+++ b/index.html
@@ -14,7 +14,79 @@
 </head>
 
 <body>
-
+    <aside>
+        <img src="./img/Logo.svg" alt="logo do CodeConnect">
+        <nav>
+            <ul class="lista-links">
+                <li>
+                    <a href="#" class="link-destaque">Publicar</a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="./img/feed.svg" alt="">
+                        Feed
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="./img/account_circle.svg" alt="">
+                        Perfil
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="./img/info.svg" alt="">
+                        Sobre nós
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="./img/logout.svg" alt="">
+                        Sair
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </aside>
+    <main>
+        <div class="container-upload-imagem">
+            <div class="container-imagem">
+                <img src="./img/imagem1.png" alt="" class="main-imagem">
+            </div>
+            <button>Carregar Imagem</button>
+            <div class="container-imagem-nome">
+                <p>image_projeto.png</p>
+                <img src="./img/close.svg" alt="">
+            </div>
+        </div>
+        <div class="container-descricao">
+            <h2>Novo Projeto</h2> 
+            <form>
+                <div>
+                    <label for="nome">Nome do Projeto</label>
+                    <input type="text" name="nome" id="nome">
+                </div>
+                <div>
+                    <label for="descricao">Descricao</label>
+                    <textarea name="descricao" id="descricao"></textarea>
+                </div>
+                <div>
+                    <label for="categoria">Tags</label>
+                    <input type="text" name="categoria" id="categoria">
+                </div>
+                <ul class="lista-tags">
+                    <li>
+                        <p>Front-end</p>
+                        <img src="./img/close-black.svg" alt="">
+                    </li>
+                </ul>
+                <div class="container-botoes">
+                    <button class="botao-descartar">Descartar</button>
+                    <button class="botao-publicar">Publicar</button>
+                </div>
+            </form>
+        </div>
+    </main>
     <script src="script.js"></script>
 </body>
 
