--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
             <div class="container-imagem">
                 <img src="./img/imagem1.png" alt="" class="main-imagem">
             </div>
-            <button>Carregar Imagem</button>
+            <button id="upload-btn">Carregar Imagem</button>
+            <input type="file" id="image-upload" accept="image/" style="display: none;">
             <div class="container-imagem-nome">
                 <p>image_projeto.png</p>
                 <img src="./img/close.svg" alt="">
@@ -87,7 +88,7 @@
             </form>
         </div>
     </main>
-    <script src="script.js"></script>
+    <script src="scripts.js"></script>
 </body>
 
 </html>
