--- a/index.html
+++ b/index.html
@@ -76,10 +76,7 @@
                     <input type="text" name="categoria" id="input-tags">
                 </div>
                 <ul class="lista-tags" id="lista-tags">
-                    <li>
-                        <p>Front-end</p>
-                        <img src="./img/close-black.svg" alt="">
-                    </li>
+                <!-- As tags serão adicionadas aqui! -->
                 </ul>
                 <div class="container-botoes">
                     <button class="botao-descartar">Descartar</button>
