Limpando formulário após idgitação

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <input type="text" name="nome" id="nome">
                 </div>
                 <div>
-                    <label for="descricao">Descricao</label>
+                    <label for="descricao">Descrição</label>
                     <textarea name="descricao" id="descricao"></textarea>
                 </div>
                 <div>
